syntax = "proto3";
package Protocol;
//option optimize_for = LITE_RUNTIME;
option java_package = "com.cat.server.game.data.proto";
option java_outer_classname = "PBMission";

import "PBItem.proto";

//任务
message PBMissionInfo
{
   int32 id = 1;				//任务配置id
   int32 status = 2;			//0=未接取;1=已接取未完成;2=已完成未领取;3=已完成已领取  注意：客户端只会收到状态0\1\2
   int32 type = 3;				//任务类型 1主线 2剧情 3支线 4成就 5日常
   int32 progress = 4;			//当前进度
}


//任务列表
message AckMissionInfo
{
	repeated PBMissionInfo missions = 1;
}

//领取任务奖励
message ReqMissionReward
{
	int32 id = 1;		//mission id,-1表示一键领取
}

//返回领取奖励
message AckMissionReward
{
	int32 code = 1;					//错误码,非0表示弹提示
	repeated PBRewardInfo rewards = 3;			//奖励
}

//删除任务列表
message AckMissionDel
{
	repeated int32 id = 1;		//要删除的任务id
}